# promptly

./: CHANGELOG.md  README.md  Taskfile.yml  gen-swagger.sh  main.py  migrage.py  openai.py  pyproject.toml  swagger.py
config/: sample.yaml
doc/: chatx.prompt.md  doc.embedding.md  summary.prompt.md
front/: package-lock.json  package.json  vue.config.ts
front/sdk/apis/: default-api.ts
front/sdk/models/: action-event.ts  index.ts  message.ts  update-event.ts
front/src/: App.vue  main.ts
front/src/components/: PromptHistory.vue  PromptPreview.vue
front/src/router/: index.ts
front/src/scripts/: api.ts
front/src/stores/: snapshot.ts
front/src/views/: DebugView.vue  ProfileView.vue  PromptView.vue
frontend/v1/: package.json  pnpm-lock.yaml  vue.config.js
frontend/v2/: .env.development  .env.production  package.json  pnpm-lock.yaml  tsconfig.app.json
gui/: helper.py  simple.py
notebook/: test_chat.ipynb  test_search.ipynb
prompt/model/: case.py  event.py  graph.py  node.py  orm.py  profile.py
prompt/openai/: test_chat.ipynb  test_search.ipynb
prompt/server/: __init__.py  api.py  case.py  event.py  graph.py  index.py  node.py  prompt.py  server.py  static.py  util.py  view.py
promptly/: config.py  lang.py  llm.py  server.py
promptly-vue/: .env.production  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vue.config.ts
promptly-vue/sdk/: api.ts
promptly-vue/src/: App.vue  main.ts
promptly/api/: action.py  case.py  config.py  embed.py  prompt.py  static.py  util.py
promptly/config/: __init__.py
promptly/dao/: __init__.py  base.py  mongo.py  sql.py  test_orm.py
promptly/fastapi_utils/: __init__.py
promptly/gui/: simple.py
promptly/manager/: __init__.py  base.py  memory.py  mongo.py  pickle.py  tinydb.py
promptly/model/: case.py  event.py  graph.py  node.py  profile.py  prompt.py  test_prompt.py  testcase.py
promptly/openai/: test_chat.ipynb
promptly/orm/: mongo.py
promptly/schema/: __init__.py
promptly/server/: __init__.py  api.py  app.py  case.py  debug.py  llm.py  prompt.py  static.py  testing.py  util.py  view.py
tests/: test_server.py
web/: graph.html  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.vue  main.ts
web2/: index.html  package.json
web2/src/: App.tsx  main.tsx
(+134 files in other folders)
