[tool.poetry]
name = "promptly"
version = "0.1.0"
description = ""
authors = ["FFengIll <fengyouzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "^0.103.1"
sqlalchemy = "<2.0.0"
pydantic = "<2.0.0"
httpx = "^0.24.1"
openai = "^0.27.9"
fastapi-utils = "^0.2.1"
sqlmodel = "^0.0.8"
odmantic = "^0.9.2"


[[tool.poetry.source]]
# 国内建议修改源
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
