[tool.poetry]
name = "promptly"
version = "0.1.0"
description = ""
authors = ["FFengIll <fengyouzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "^0.103.1"
# httpx = "^0.24.1"
openai = "^0.27.9"
uvicorn = "^0.23.2"
loguru = "^0.7.2"
path = "^16.7.1"
jinja2 = "^3.1.2"
pydantic-mongo = "^2.0.2"
strenum = "^0.4.15"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"
requests = {extras = ["socks"], version = "^2.31.0"}

[[tool.poetry.source]]
# 国内建议修改源
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
