[tool.poetry]
name = "promptly"
version = "0.1.0"
description = ""
authors = ["FFengIll <fengyouzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "0.115.8"
uvicorn = "0.34.0"
loguru = "^0.7.2"
path = "^16.7.1"
jinja2 = "^3.1.5"
pydantic-mongo = "^2.3.0"
strenum = "^0.4.15"
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
requests = { extras = ["socks"], version = "^2.31.0" }
typer = "^0.15.1"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
openai = "0.28"
pydantic = "^2.10.6"

[[tool.poetry.source]]
# 国内建议修改源
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
